<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/loginbackground"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_title_height"
            android:text="@string/login_title"
            style="@style/login_title"
           />
    </RelativeLayout>    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="70dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    >   
   <Button
       android:id="@+id/cash"
       android:layout_width="match_parent"
       android:layout_height="@dimen/cash_btn_height"
       android:text="@string/cash"
       style="@style/cash_button"
       />
</RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="70dp"
    android:layout_marginRight="70dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    >   
   <Button
       android:id="@+id/order_manage"
       android:layout_width="match_parent"
       android:layout_height="@dimen/cash_btn_height"
       android:text="@string/order"
       style="@style/cash_button"
       />
</RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="50dp"
    >
 <TextView
     android:id="@+id/version_message"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="12dp"
     android:textColor="@color/white"
     android:layout_gravity="center_horizontal"
     />   
</LinearLayout>
</LinearLayout>
