<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="37dp"
    android:orientation="horizontal"
    >
    <LinearLayout
        android:id="@+id/all_order"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/all_order_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allOrder"
            android:textSize="@dimen/mordertitle_small_size"
            android:textColor="@color/default_text_color"
            />
    </LinearLayout>
     <LinearLayout
        android:id="@+id/fuel_order"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/fuel_order_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuelOrder"
            android:textSize="@dimen/mordertitle_small_size"
            android:textColor="@color/default_text_color"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/shop_order"
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/shop_order_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopOrder"
            android:textSize="@dimen/mordertitle_small_size"
            android:textColor="@color/default_text_color"
            />
    </LinearLayout>
</LinearLayout>
 <ImageView
     android:id="@+id/tableLine"
     android:layout_width="100dp"
     android:layout_height="3dp"
     android:background="@drawable/tabline"
     />   

</LinearLayout>
