<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:orientation="horizontal"
     android:background="@drawable/myorderback"
     >
   <LinearLayout
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
 <TextView
     android:id="@+id/vouchesback_tv"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:text="@string/back"
     style="@style/back_tv"
     android:clickable="true"
     />  
</RelativeLayout>    
</LinearLayout>
<LinearLayout
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
   <TextView
       android:layout_margin="10dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="@string/fuelservice"
       android:textSize="@dimen/mordertitle_size"
       android:textColor="@color/white"
       android:gravity="center"
       /> 
</LinearLayout>
<LinearLayout
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
   <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  
</RelativeLayout>  
</LinearLayout>      
 </LinearLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
      <ListView
          android:id="@+id/vouches_list"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          >
      </ListView>
      <LinearLayout
          android:id="@+id/invis"
          android:layout_width="match_parent"
          android:layout_height="50dp"
          android:orientation="horizontal"
          android:layout_alignParentBottom="true"
          android:visibility="gone"
          >
        <Button
            android:id="@+id/vouches_checkbt_invis"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/vouches_checkbt_select"
            android:text="@string/check"
            android:textSize="@dimen/mordertitle_size"
            android:textColor="@color/white"
            />  
      </LinearLayout>
  </RelativeLayout>
   
 </LinearLayout>
