<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fuelorder_background"
    android:orientation="vertical" >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/payscreen"
    android:orientation="vertical"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:orientation="horizontal"
     >
   <LinearLayout
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:paddingLeft="3dp"
       android:src="@drawable/backico"
       />   
 <TextView
     android:id="@+id/back_tv"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:text="@string/back"
     style="@style/back_tv"
     android:clickable="true"
     />  
</RelativeLayout>    
</LinearLayout>
<LinearLayout
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
   <TextView
       android:id="@+id/fuelservice_tv"
       android:layout_margin="10dp"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:text="@string/fuelservice"
       android:textSize="@dimen/mordertitle_size"
       android:textColor="@color/white"
       android:gravity="center"
       /> 
</LinearLayout>
<LinearLayout
    android:layout_width="3dp"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
   <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  
</RelativeLayout>  
</LinearLayout>      
 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="3dp"
     android:layout_weight="1"
     >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
   <LinearLayout
       android:id="@+id/payhint_linear"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/themoneyforpay"
        android:textSize="@dimen/moneypay"
        android:textColor="@color/white"
        android:gravity="center"
        />   
   </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_below="@id/payhint_linear"
       android:layout_marginTop="10dp"
       >
     <EditText
         android:id="@+id/input_money_et"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:paddingLeft="10dp"
         android:inputType="numberDecimal"
         android:singleLine="true"
         android:maxLength="6"
         android:textSize="@dimen/moneyshow"
         android:hint="0.00"
         android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:textCursorDrawable="@drawable/my_cursor"
         android:background="@null"
         />  
   </LinearLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
       android:layout_alignParentBottom="true"
       >
    <TextView
        android:id="@+id/moneyshouldpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/themoneyrealpay"
        android:textColor="@color/myellow"
        android:textSize="@dimen/moneypay"
        />
    <TextView
        android:id="@+id/realpay_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/moneyshouldpay"
        android:text="0.00"
        android:textSize="@dimen/moneypay"
        android:textColor="@color/myellow"
        android:layout_centerVertical="true"
        />
     <TextView
         android:id="@+id/checkandpay_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:text="@string/checkandpay"
         android:textSize="@dimen/moneypay"
         android:padding="5dp"
         android:gravity="center"
         android:clickable="true"
         android:background="@drawable/checkandpaybackground"
         />  
   </RelativeLayout>   
  </RelativeLayout>   
 </LinearLayout>    
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:orientation="vertical"
    
    >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="35dp"
       android:orientation="vertical"
       android:background="@color/white"
       >
  <TextView
      android:layout_height="match_parent"
      android:layout_width="wrap_content"
      android:id="@+id/wxtagshow_tv"
      android:gravity="center"
      android:text="客户等级："
      android:textSize="@dimen/customerinfo"
      android:paddingLeft="10dp"
      />
    <TextView
           android:id="@+id/wxtag_tv"
           android:layout_alignParentRight="true"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:gravity="center"
           android:text=""
           android:textSize="@dimen/customerinfo"
           android:paddingRight="20dp"
           />    
   </RelativeLayout>
     <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="35dp"
       android:orientation="vertical"
       android:layout_marginTop="1dp"
       android:background="@color/white"
       >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
          <TextView
           android:id="@+id/menber_points"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:gravity="center"
           android:text="会员积分："
           android:textSize="@dimen/customerinfo"
           android:paddingLeft="10dp"
           />
          <TextView
              android:id="@+id/member_points_tv"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center"
              android:layout_alignParentRight="true"
              android:text=""
              android:textSize="@dimen/customerinfo"
              android:paddingRight="20dp"
              />    
    </RelativeLayout>
   </RelativeLayout>
    <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="35dp"
       android:orientation="vertical"
       android:layout_marginTop="1dp"
       android:background="@color/white"
       >
       <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
          <TextView
           android:id="@+id/voucher_valiable"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:gravity="center"
           android:text="可用代金券："
           android:textSize="@dimen/customerinfo"
           android:paddingLeft="10dp"
           />
          <TextView
              android:id="@+id/voucheramount_tv"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center"
              android:layout_alignParentRight="true"
              android:text="0"
              android:textSize="@dimen/customerinfo"
              android:paddingRight="20dp"
              />    
    </RelativeLayout> 
   </RelativeLayout>
</LinearLayout>
<LinearLayout
    
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:background="@color/white"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="39dp"
      android:orientation="vertical"
      >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       >
      <TextView
          android:id="@+id/pointsValable_show"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:gravity="center_vertical"
          android:text="可用0积分"
          android:textSize="@dimen/customerinfo"
          android:paddingLeft="10dp"
          />
      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_alignParentRight="true"
          android:layout_marginRight="10dp"
          >
          <TextView
              android:id="@+id/pointsformoney"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:text="0.00"
              android:textSize="@dimen/customerinfo"
              android:textColor="@color/red"
              />
          <CheckBox
              android:id="@+id/fuelpay_usepoints_cb"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/pointsformoney"
              android:layout_centerVertical="true"
              />
      </RelativeLayout> 
   </RelativeLayout>
  </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:background="@color/order_background"
       >    
   </LinearLayout>   
<LinearLayout
    android:id="@+id/vouche_layout"
    android:layout_width="match_parent"
    android:layout_height="39dp"
    android:orientation="vertical"
    android:background="@drawable/choosevouches"
    android:clickable="true"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:gravity="center_vertical"
       android:text="可用代金券"
       android:textSize="@dimen/customerinfo"
       android:paddingLeft="10dp"
       />
   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_alignParentRight="true"
       android:layout_marginRight="10dp"
       >
       <TextView
              android:id="@+id/voucheformoney"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:text="0.00"
              android:textSize="@dimen/customerinfo"
              android:textColor="@color/red"
              />
       <ImageView
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:scaleType="centerInside"
           android:layout_toRightOf="@id/voucheformoney"
           android:src="@drawable/extendicon"
           android:layout_centerVertical="true"
           /> 
   </RelativeLayout>   
  </RelativeLayout>  
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/order_background"
    >    
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="合计优惠金额"
        android:textSize="@dimen/moneypay"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        />
    <TextView
        android:id="@+id/total_discount_tv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        android:paddingRight="20dp"
        android:text="0.00"
        android:textSize="@dimen/moneypay"
        android:textStyle="bold"
        android:textColor="@color/red"
        />  
  </RelativeLayout>  
</LinearLayout>
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    >
       <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5.0dp"
        android:background="@color/fuelorder_background"
        android:focusable="true"
        android:keyBackground="@drawable/mkey_selector"
        android:keyTextColor="@color/black"
        android:keyTextSize="26.0sp"
        android:shadowColor="@color/fuelorder_background"
        android:shadowRadius="0.0"
        android:visibility="visible"
        />  
</LinearLayout>
</LinearLayout>
